<resources>
    <string name="app_name">Taiyo</string>

    // Anime
    <string name="get_recommendations">Аниме/Манга в приложении Taiyo</string>
    <string name="episodes_separator">&#160;из&#160;</string>
    <string name="ongoings_episodes">%s эп</string>
    <string name="soon">скоро</string>

    // LoadState
    <string name="load_error">Не удалось загрузить страницу</string>
    <string name="load_error_info">Проверьте подключение к Интернету</string>
    <string name="refresh_button">Попробовать снова</string>

    // TabLayout
    <string name="ongoings">Онгоинги</string>
    <string name="anons">Анонсы</string>
    <string name="released">Завершенные</string>
    <string name="movies">Фильмы</string>

    // Search
    <string name="search_anime">Поиск аниме</string>
    <string name="search_result">Результаты поиска</string>

    // Main NavBar
    <string name="anime">Аниме</string>
    <string name="profile">Профиль</string>
    <string name="manga">Манга</string>

    // AnimeDetail
    <string name="next_series_number">До выхода %s серии</string>
    <string name="place_holder_symbol">~</string>
    <string name="rating">Рейтинг</string>
    <string name="ratesScoresStats">%s голосов</string>
    <string name="place_holder_rating">&#160;/&#160;</string>
    <string name="max_rating">10</string>
    <string name="episodes_total">Всего серий</string>
    <string name="episodes">%s из %s</string>
    <string name="kind">Формат</string>
    <string name="duration_label">Длительность</string>
    <string name="duration_with_hours">%s ч. %s мин.</string>
    <string name="duration_with_minutes">%s мин.</string>
    <string name="studio">Студия</string>
    <string name="season">Сезон</string>
    <string name="add_to_list">Добавить в список</string>
    <string name="empty_description">Описание отсутствует</string>

    // Episode fragment
    <string name="select">Выбрать</string>
    <string name="dub">Озвучка</string>
    <string name="episode_number">%s СЕРИЯ</string>

    // Info
    <string name="description">Описание</string>
    <string name="watch">Смотреть</string>
    <string name="status">Статус</string>
    <string name="aired_on">Дата выхода</string>

    // Description
    <string name="detail">Подробнее…</string>
    <string name="hideDetail">Скрыть</string>

    // Layout Headers
    <string name="video">Видео</string>
    <string name="screenshots">Кадры</string>
    <string name="in_peoples_lists">В списках у людей</string>
    <string name="recommendations">Рекомендации</string>

    // Status
    <string name="watching">Смотрю</string>
    <string name="plan_to_watch">В планах</string>
    <string name="completed">Просмотрено</string>
    <string name="on_hold">Отложено</string>
    <string name="dropped">Брошено</string>

    // Rating
    <string name="num_10">10</string>
    <string name="num_9">9</string>
    <string name="num_8">8</string>
    <string name="num_7">7</string>
    <string name="num_6">6</string>
    <string name="num_5">5</string>
    <string name="num_4">4</string>
    <string name="num_3">3</string>
    <string name="num_2">2</string>
    <string name="num_1">1</string>

    // Episodes Fragment
    <string name="episode_list">Список серий</string>
    <string name="item_translation">%s  •  %s  эп</string>
    <string name="item_translation_one_episode">%s </string>

</resources>