<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        style="@style/info_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder_symbol"
        android:textColor="@color/carmine_pink"
        style="@style/info_value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rating_place_holder" />

    <TextView
        android:id="@+id/rating_place_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder_rating"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rating_content" />

    <TextView
        android:id="@+id/rating_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/episodes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/episodes_total"
        style="@style/info_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_label" />

    <TextView
        android:id="@+id/episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/rating_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/kind_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/kind"
        style="@style/info_label"
        app:layout_constraintTop_toBottomOf="@id/episodes_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/episodes_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/duration_label"
        style="@style/info_label"
        app:layout_constraintTop_toBottomOf="@id/kind_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/kind_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/studio_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/studio"
        style="@style/info_label"
        app:layout_constraintTop_toBottomOf="@id/duration_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        android:textColor="@color/carmine_pink"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/duration_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/season_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/season"
        style="@style/info_label"
        app:layout_constraintTop_toBottomOf="@id/studio_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/studio_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@id/season_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="5"
        android:lineSpacingExtra="6dp"
        android:ellipsize="end"
        android:text="@string/place_holder_symbol"
        style="@style/info_label"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>