<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_rating"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/layout_padding_top"
    android:background="@drawable/layout_detail_background"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        style="@style/LayoutHeader"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/cl_rating_margin_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TextValue"
                android:textSize="@dimen/h1_text_size"
                android:fontFamily="@font/roboto_medium"
                tools:text="4.8" />

            <TextView
                android:id="@+id/tv_num_scoring_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                style="@style/TextLabel"
                tools:text="242K голосов" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/ll_first_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/tv_9"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:layout_marginEnd="@dimen/num_rating_margin_end"
                        android:text="@string/num_9"
                        style="@style/TextLabelAlpha" />

                    <TextView
                        android:id="@+id/tv_7"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:layout_marginEnd="@dimen/num_rating_margin_end"
                        android:text="@string/num_7"
                        style="@style/TextLabelAlpha" />

                    <TextView
                        android:id="@+id/tv_5"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"                        android:layout_marginEnd="@dimen/num_rating_margin_end"
                        android:text="@string/num_5"
                        style="@style/TextLabelAlpha" />

                    <TextView
                        android:id="@+id/tv_3"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"                        android:layout_marginEnd="@dimen/num_rating_margin_end"
                        android:text="@string/num_3"
                        style="@style/TextLabelAlpha" />

                    <TextView
                        android:id="@+id/tv_1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"                        android:layout_marginEnd="@dimen/num_rating_margin_end"
                        android:text="@string/num_1"
                        style="@style/TextLabelAlpha" />

                </LinearLayout>

                <com.db.williamchart.view.HorizontalBarChartView
                    android:id="@+id/horizontal_bar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"

                    app:chart_axis="none"
                    app:chart_spacing="10dp"
                    app:chart_barsColor="@color/orange"
                    app:chart_barsBackgroundColor="@color/grey_background"
                    app:chart_barsRadius="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ll_first_numbers"
                    app:layout_constraintEnd_toStartOf="@id/ll_second_numbers"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <LinearLayout
                    android:id="@+id/ll_second_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/tv_10"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:layout_marginStart="@dimen/num_rating_margin_start"
                        android:text="@string/num_10"
                        style="@style/TextLabelAlpha" />

                    <TextView
                        android:id="@+id/tv_8"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:layout_marginStart="@dimen/num_rating_margin_start"
                        android:text="@string/num_8"
                        style="@style/TextLabelAlpha" />

                    <TextView
                        android:id="@+id/tv_6"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:layout_marginStart="@dimen/num_rating_margin_start"
                        android:text="@string/num_6"
                        style="@style/TextLabelAlpha" />

                    <TextView
                        android:id="@+id/tv_4"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:layout_marginStart="@dimen/num_rating_margin_start"
                        android:text="@string/num_4"
                        style="@style/TextLabelAlpha"  />

                    <TextView
                        android:id="@+id/tv_2"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:layout_marginStart="@dimen/num_rating_margin_start"
                        android:text="@string/num_2"
                        style="@style/TextLabelAlpha"  />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>