<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        style="@style/info_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/episodes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/episodes_total"
        style="@style/info_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_label" />

    <TextView
        android:id="@+id/episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/status_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/kind_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/kind"
        style="@style/info_label"
        app:layout_constraintTop_toBottomOf="@id/episodes_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/episodes_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/duration_label"
        style="@style/info_label"
        app:layout_constraintTop_toBottomOf="@id/kind_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/kind_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/studio_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/studio"
        style="@style/info_label"
        app:layout_constraintTop_toBottomOf="@id/duration_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/duration_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/aired_on_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/aired_on"
        style="@style/info_label"
        app:layout_constraintTop_toBottomOf="@id/studio_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/aired_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/place_holder_symbol"
        style="@style/info_value"
        app:layout_constraintTop_toBottomOf="@id/studio_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:maxLines="5"
        android:lineSpacingExtra="6dp"
        android:ellipsize="end"
        android:text="@string/place_holder_symbol"
        style="@style/info_label"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>