<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:src="@drawable/s_error"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_load_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_error"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_load_error_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/load_error_info"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_load_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_button"
        android:textAllCaps="false"
        android:stateListAnimator="@null"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp"
        android:textColor="@color/bg_white"
        android:visibility="gone"
        app:cornerRadius="32dp"
        app:backgroundTint="@color/carmine_pink"
        app:strokeWidth="1dp"
        tools:visibility="visible"
        app:strokeColor="@color/carmine_pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_load_error_info"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:indeterminateTint="@color/loading"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>